--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my second repot</title>
+    <title>my second repo</title>
 </head>
 <body>
-    
+   <h1>Hello Everyone!</h1> 
+   <h3>Welcome to my website</h3>
 </body>
 </html>
