--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
    <h1>Hello Everyone!</h1> 
    <h3>Welcome to my website</h3>
+   <h5>About</h5>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur excepturi dolorum, praesentium voluptatum nobis dignissimos autem tenetur porro? Atque tempora accusantium placeat laborum quaerat aperiam adipisci amet consequatur totam esse.</p>
 </body>
 </html>
