adding my new images

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
    <h5>About</h5>
    <p>This is md gias uddin. Come from Tazumuddin.Bhola. Now I am Studying at Green University Of Bangladesh. I love programming. I want to be a Software Engineer.</p>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur excepturi dolorum, praesentium voluptatum nobis dignissimos autem tenetur porro? Atque tempora accusantium placeat laborum quaerat aperiam adipisci amet consequatur totam esse.</p>
+   <img src="images/my Formal Pic.jpg" alt="">
 </body>
 </html>
